# acesso-livre-api

./: .env.example  .env.test  .gitignore  README.md  alembic.ini  create_admin.py  pyproject.toml
.github/workflows/: test-dev.yml
acesso_livre_api/src/: config.py  database.py  exceptions.py  func_log.py  main.py  openapi_config.py
acesso_livre_api/src/admins/: dependencies.py  docs.py  email_service.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
acesso_livre_api/src/auth/: exceptions.py  models.py  schemas.py  service.py
acesso_livre_api/src/comments/: docs.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
acesso_livre_api/src/locations/: docs.py  exceptions.py  models.py  router.py  schemas.py  service.py
acesso_livre_api/src/routes/: auth.py
acesso_livre_api/storage/: client.py  delete_image.py  dependencies.py  get_url.py  upload_image.py
alembic/: env.py
alembic/versions/: 30e9d27e1540_move_top_and_left_fields_from_.py  57a7a4bd2744_add_top_and_left_lines_to_.py  7ca540f668b0_rename_icon_url_to_icon_path.py  9deeefc21b29_add_one_to_many_location_comments_.py  add_admin_icon_and_comment_admin_relation.py  c7dc57ee62db_remove_top_and_left_columns_from_.py  cc4427f38b62_add_timezone_to_reset_token_expires.py  f7de5c5a272b_initial_migration.py  ff9b0ca356e9_create_comment_icons_table_and_.py
k6/: load-test.js  stress-test.js
tests/: conftest.py
tests/admins/: conftest.py
tests/admins/integration/: test_authRoute.py  test_passwordResetRoute.py  test_registerRoute.py
tests/admins/unit/: test_authAdmin.py  test_createAccessToken.py  test_createAdmin.py  test_emailService.py  test_passwordReset.py  test_password_hash.py  test_requestPasswordReset.py  test_verifyToken.py
tests/comments/integration/: test_comments_routes.py
tests/locations/: conftest.py
tests/storage/: test_get_url.py
(+13 files in other folders)
