[tool.poetry]
name = "acesso-livre-api"
version = "0.1.0"
description = ""
authors = ["Wandrey <wandrey7dev@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
pydantic-settings = {extras = ["dotenv"], version = "^2.10.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
