[tool.poetry]
name = "acesso-livre-api"
version = "0.1.0"
description = ""
authors = ["Wandrey <wandrey7dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.116.2"}
pydantic-settings = {extras = ["dotenv"], version = "^2.10.1"}
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
python-jose = "^3.5.0"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
